Filter works with text and genre, but I observed sometimes double entries which I cannot get rid of.